--- a/PopularMoviesStage1/build.gradle
+++ b/PopularMoviesStage1/build.gradle
@@ -20,6 +20,12 @@ allprojects {
         google()
         jcenter()
     }
+
+    /**
+    project.ext {
+        apiKey = f3d3c2621220f0e7d9ca0a3602c42f3c
+    }
+     */
 }
 
 task clean(type: Delete) {
